tests/good/json7.lens
stream when (entry) {
    print(entry.hi)
}
