tests/bad/empty_filter.lens
stream when (foo bar) {
    print(e.hi)
}
